Fix reminder menu spacing

--- a/src/renderer/assets/style.css
+++ b/src/renderer/assets/style.css
@@ -392,7 +392,6 @@ REMINDERS
 #reminder__context-menu {
     display: flex;
     flex-direction: column;
-    gap: 2px;
     position: absolute;
     z-index: 100;
     list-style: none;
@@ -409,20 +408,15 @@ REMINDERS
     border-color: var(--popup-accent-color);
 }
 
-.reminder__context-menu__item {
-    padding: 4px 2px;
-}
 
 .reminder__context-menu__item a {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 8px;
+    padding: 4px 2px;
     justify-content: space-between;
     
-    width: 100%;
-    height: 100%;
-
     text-decoration: none;
     color: inherit;
 
